# FileConverter

./: CMakeLists.txt  README.md  SECURITY.md
hdrs/: CLog.h  ConvertAll.h  InfoBox.h  WindowFrame.h  constants.h  main.h
icons/: icon.h
src/: CLog.cpp  ConvertAll.cpp  InfoBox.cpp  WindowFrame.cpp  main.cpp
